# shad-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
Examples/: EchoBot.py  GroupManagement.py  deleteGroupBlackList.py  downloader.py
docs/: Authorization.md  Error-Handling.md  Handling-Updates.md  Install-Guide.md  Project-Setup.md  README.md  basic.md
shadapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shadapi/accounts/: _client.py  client.py
shadapi/accounts/connections/: __init__.py
shadapi/bots/: connections.py
shadpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
