[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadapi"
version = "0.1.1"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "HoseanRC" }]
license = { file = "LICENSE" }
classifiers = [
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
    'Topic :: Internet',
    'Topic :: Communications',
    'Topic :: Communications :: Chat',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]
keywords = ['shad', 'shadapi', 'shadio', 'chat', 'bot', 'robot', 'asyncio']
dependencies = [
    'wheel',
    'pycryptodome',
    'websockets',
    'pybase64',
    'aiohttp',
    'mutagen',
    'TinyTag',
    'urllib3'
]
requires-python = ">=3.7"

[project.urls]
Github = "https://github.com/HoseanRC/shad-api"
